# haskell2

./: .atom-build.json  README.md  haskell2.cabal
app/: Main.hs
app/HttpClient/: TicTacToeApiClient.hs
src/: Lib.hs
src/Json/: Deserialization.hs
src/Model/: Deserialization.hs  Move.hs  Serialization.hs
src/Resolver/: MoveResolver.hs
test/: DeserializerSpec.hs  ResolverSpec.hs  Spec.hs  SpecHelper.hs
