name:                haskell2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Model.Move
                     , Model.Deserialization
                     , Resolver.MoveResolver
                     , Model.Serialization
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , aeson
                     , bytestring
  default-language:    Haskell2010

executable haskell2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell2
                     , parsec
                     , HTTP
                     , network-uri
  default-language:    Haskell2010
  other-modules:       HttpClient.TicTacToeApiClient

test-suite haskell2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell2
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       SpecHelper
                     , ResolverSpec
                     , DeserializerSpec

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell2
